--- a/src/main/resources/META-INF/resources/semanticcms-autogit-taglib/head.inc.jspx
+++ b/src/main/resources/META-INF/resources/semanticcms-autogit-taglib/head.inc.jspx
@@ -21,13 +21,14 @@ You should have received a copy of the GNU Lesser General Public License
 along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses/>.
 -->
 <jsp:root
+	xmlns:ao="http://aoindustries.com/ao-taglib"
+	xmlns:c="http://java.sun.com/jsp/jstl/core"
+	xmlns:p="https://semanticcms.com/semanticcms-core-taglib"
 	xmlns:jsp="http://java.sun.com/JSP/Page"
 	version="2.1"
-	xmlns:c="http://java.sun.com/jsp/jstl/core"
-	xmlns:ao="http://aoindustries.com/ao-taglib"
 >
 	<jsp:directive.page language="java" buffer="512kb" autoFlush="true" pageEncoding="UTF-8" session="false" />
-	<c:if test="${!header['X-com-semanticcms-core-exporting']}">
+	<c:if test="${!p:isExporting()}">
 		<ao:script src="/semanticcms-autogit-taglib/scripts.js" />
 		<ao:script>
 			semanticcms_autogit_taglib.getGitStatusUrl = <ao:out value="${ao:encodeURL(pageContext.request.contextPath.concat('/semanticcms-autogit-taglib/ajax/get-git-status.jspx'))}" />;
