--- a/src/main/book-filtered/changelog.jspx
+++ b/src/main/book-filtered/changelog.jspx
@@ -57,7 +57,7 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 		<changelog:release
 			projectName="@{project.name}"
 			version="1.3.1"
-			dateCreated="2016-10-20T19:10:00-0500"
+			datePublished="2016-10-20T19:10:00-0500"
 			groupId="@{project.groupId}"
 			artifactId="@{project.artifactId}"
 			scmUrl="@{project.scm.url}"
@@ -71,7 +71,7 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 		<changelog:release
 			projectName="@{project.name}"
 			version="1.3.0"
-			dateCreated="2016-10-04T21:32:00-0500"
+			datePublished="2016-10-04T21:32:00-0500"
 			groupId="@{project.groupId}"
 			artifactId="@{project.artifactId}"
 			scmUrl="@{project.scm.url}"
@@ -85,7 +85,7 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 		<changelog:release
 			projectName="@{project.name}"
 			version="1.2"
-			dateCreated="2016-09-11T17:19:00-0500"
+			datePublished="2016-09-11T17:19:00-0500"
 			groupId="@{project.groupId}"
 			artifactId="@{project.artifactId}"
 			scmUrl="@{project.scm.url}"
@@ -98,7 +98,7 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 		<changelog:release
 			projectName="@{project.name}"
 			version="1.1"
-			dateCreated="2016-09-03T11:04:00-0500"
+			datePublished="2016-09-03T11:04:00-0500"
 			groupId="@{project.groupId}"
 			artifactId="@{project.artifactId}"
 			scmUrl="@{project.scm.url}"
@@ -111,7 +111,7 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 		<changelog:release
 			projectName="@{project.name}"
 			version="1.0"
-			dateCreated="2016-08-28T20:39:00-0500"
+			datePublished="2016-08-28T20:39:00-0500"
 			groupId="@{project.groupId}"
 			artifactId="@{project.artifactId}"
 			scmUrl="@{project.scm.url}"
