--- a/book/src/main/resources-filtered/META-INF/resources/autogit/taglib/index.jspx
+++ b/book/src/main/resources-filtered/META-INF/resources/autogit/taglib/index.jspx
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <!--
 semanticcms-autogit-taglib - SemanticCMS automatic Git in a JSP environment.
 Copyright (C) 2016, 2017  AO Industries, Inc.
