--- a/book/src/main/resources-filtered/META-INF/resources/autogit/taglib/changelog.jspx
+++ b/book/src/main/resources-filtered/META-INF/resources/autogit/taglib/changelog.jspx
@@ -36,7 +36,7 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 		shortTitle="Changelog"
 		tocLevels="1"
 		datePublished="2016-10-30T15:58:45-0500"
-		dateModified="2019-06-23T00:17:17-0500"
+		dateModified="2019-11-02T16:41:06-0500"
 	>
 		<!-- The current snapshot, unreleased version -->
 		<c:set var="version" value="@{com.semanticcms:semanticcms-autogit-taglib:pom.version}" />
@@ -54,6 +54,7 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 			>
 				<ul>
 					<li>Updated for <core:link book="/" page="/" /> 2 compatibility.</li>
+					<li>Minimum Java version changed from 1.7 to 1.8.</li>
 				</ul>
 			</changelog:release>
 		</c:if>
