--- a/src/main/resources/META-INF/resources/semanticcms-autogit-taglib/ajax/get-git-status.jspx
+++ b/src/main/resources/META-INF/resources/semanticcms-autogit-taglib/ajax/get-git-status.jspx
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 semanticcms-autogit-taglib - SemanticCMS automatic Git in a JSP environment.
-Copyright (C) 2016  AO Industries, Inc.
+Copyright (C) 2016, 2020  AO Industries, Inc.
 	support@aoindustries.com
 	7262 Bull Pen Cir
 	Mobile, AL 36695
@@ -35,7 +35,8 @@ Request parameters:
 	xmlns:fn="http://java.sun.com/jsp/jstl/functions"
 	xmlns:jsp="http://java.sun.com/JSP/Page"
 >
-	<jsp:directive.page language="java" pageEncoding="UTF-8" session="false" />
+	<jsp:directive.page language="java" pageEncoding="UTF-8" />
+	<jsp:directive.page session="false" />
 	<jsp:directive.page contentType="application/xml" />
 
 	<states>
