--- a/book/src/main/resources-filtered/META-INF/resources/autogit/taglib/changelog.jspx
+++ b/book/src/main/resources-filtered/META-INF/resources/autogit/taglib/changelog.jspx
@@ -49,9 +49,9 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 			<changelog:release
 				projectName="@{documented.name}"
 				version="#{version}"
-				groupId="@{documented.groupId}"
+				groupId="@{project.groupId}"
 				artifactId="@{documented.artifactId}"
-				scmUrl="@{documented.scm.url}"
+				scmUrl="@{project.scm.url}"
 			>
 				<ul>
 					<li>Updated for <core:link book="/" page="/" /> 2 compatibility.</li>
@@ -64,9 +64,9 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 			projectName="@{documented.name}"
 			version="1.3.4"
 			datePublished="2019-06-23T00:17:17-0500"
-			groupId="@{documented.groupId}"
+			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
-			scmUrl="@{documented.scm.url}"
+			scmUrl="@{project.scm.url}"
 		>
 			<ul>
 				<li>Minimum Java version changed from 1.6 to 1.7.</li>
@@ -84,9 +84,9 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 			projectName="@{documented.name}"
 			version="1.3.3"
 			datePublished="2017-07-20T12:41:09-0500"
-			groupId="@{documented.groupId}"
+			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
-			scmUrl="@{documented.scm.url}"
+			scmUrl="@{project.scm.url}"
 		>
 			<ul>
 				<li>Updated dependencies.</li>
@@ -97,9 +97,9 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 			projectName="@{documented.name}"
 			version="1.3.2"
 			datePublished="2016-11-16T18:25:17-0600"
-			groupId="@{documented.groupId}"
+			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
-			scmUrl="@{documented.scm.url}"
+			scmUrl="@{project.scm.url}"
 		>
 			<ul>
 				<li>New <ao:a href="https://aoindustries.com/ao-oss-parent/">AO OSS Parent</ao:a> POM to simplify <code>pom.xml</code> files.</li>
@@ -117,9 +117,9 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 			projectName="@{documented.name}"
 			version="1.3.1"
 			datePublished="2016-10-20T19:10:00-0500"
-			groupId="@{documented.groupId}"
+			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
-			scmUrl="@{documented.scm.url}"
+			scmUrl="@{project.scm.url}"
 		>
 			<ul>
 				<li>Improved Javadoc formatting.</li>
@@ -131,9 +131,9 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 			projectName="@{documented.name}"
 			version="1.3.0"
 			datePublished="2016-10-04T21:32:00-0500"
-			groupId="@{documented.groupId}"
+			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
-			scmUrl="@{documented.scm.url}"
+			scmUrl="@{project.scm.url}"
 		>
 			<ul>
 				<li>Improved Javadoc formatting.</li>
@@ -145,9 +145,9 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 			projectName="@{documented.name}"
 			version="1.2"
 			datePublished="2016-09-11T17:19:00-0500"
-			groupId="@{documented.groupId}"
+			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
-			scmUrl="@{documented.scm.url}"
+			scmUrl="@{project.scm.url}"
 		>
 			<ul>
 				<li>Use dependencyManagement instead of dependency for junit.</li>
@@ -158,9 +158,9 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 			projectName="@{documented.name}"
 			version="1.1"
 			datePublished="2016-09-03T11:04:00-0500"
-			groupId="@{documented.groupId}"
+			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
-			scmUrl="@{documented.scm.url}"
+			scmUrl="@{project.scm.url}"
 		>
 			<ul>
 				<li>Improved Maven configuration for Java EE 6 dependencies.</li>
@@ -171,9 +171,9 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 			projectName="@{documented.name}"
 			version="1.0"
 			datePublished="2016-08-28T20:39:00-0500"
-			groupId="@{documented.groupId}"
+			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
-			scmUrl="@{documented.scm.url}"
+			scmUrl="@{project.scm.url}"
 		>
 			<ul>
 				<li>Moved automatic Git to separate packages.</li>
