--- a/book/src/main/resources-filtered/META-INF/resources/autogit/taglib/changelog.jspx
+++ b/book/src/main/resources-filtered/META-INF/resources/autogit/taglib/changelog.jspx
@@ -37,7 +37,7 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 		shortTitle="Changelog"
 		tocLevels="1"
 		datePublished="2016-10-30T15:58:45-0500"
-		dateModified="2020-02-26T20:09:57-0600"
+		dateModified="2020-03-07T06:01:29-0600"
 	>
 		<!-- The current snapshot, unreleased version -->
 		<c:set var="version" value="@{com.semanticcms:semanticcms-autogit-taglib:pom.version}" />
@@ -49,12 +49,16 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 			<changelog:release
 				projectName="@{documented.name}"
 				version="#{version}"
-				groupId="@{documented.groupId}"
+				groupId="@{project.groupId}"
 				artifactId="@{documented.artifactId}"
-				scmUrl="@{documented.scm.url}"
+				scmUrl="@{project.scm.url}"
 			>
 				<ul>
 					<li>Minimum Java version changed from 1.7 to 1.8.</li>
+					<li>
+						Reduced use of property substitutions in <code>pom.xml</code>.
+						This is to help 3rd-party parsers that fail to perform full Maven-compatible substitutions.
+					</li>
 					<li>Optimized ServletContext attribute initialization and concurrency.</li>
 				</ul>
 			</changelog:release>
@@ -64,9 +68,9 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 			projectName="@{documented.name}"
 			version="1.3.4"
 			datePublished="2019-06-23T00:17:17-0500"
-			groupId="@{documented.groupId}"
+			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
-			scmUrl="@{documented.scm.url}"
+			scmUrl="@{project.scm.url}"
 		>
 			<ul>
 				<li>Minimum Java version changed from 1.6 to 1.7.</li>
@@ -84,9 +88,9 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 			projectName="@{documented.name}"
 			version="1.3.3"
 			datePublished="2017-07-20T12:41:09-0500"
-			groupId="@{documented.groupId}"
+			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
-			scmUrl="@{documented.scm.url}"
+			scmUrl="@{project.scm.url}"
 		>
 			<ul>
 				<li>Updated dependencies.</li>
@@ -97,9 +101,9 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 			projectName="@{documented.name}"
 			version="1.3.2"
 			datePublished="2016-11-16T18:25:17-0600"
-			groupId="@{documented.groupId}"
+			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
-			scmUrl="@{documented.scm.url}"
+			scmUrl="@{project.scm.url}"
 		>
 			<ul>
 				<li>New <ao:a href="https://aoindustries.com/ao-oss-parent/">AO OSS Parent</ao:a> POM to simplify <code>pom.xml</code> files.</li>
@@ -117,9 +121,9 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 			projectName="@{documented.name}"
 			version="1.3.1"
 			datePublished="2016-10-20T19:10:00-0500"
-			groupId="@{documented.groupId}"
+			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
-			scmUrl="@{documented.scm.url}"
+			scmUrl="@{project.scm.url}"
 		>
 			<ul>
 				<li>Improved Javadoc formatting.</li>
@@ -131,9 +135,9 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 			projectName="@{documented.name}"
 			version="1.3.0"
 			datePublished="2016-10-04T21:32:00-0500"
-			groupId="@{documented.groupId}"
+			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
-			scmUrl="@{documented.scm.url}"
+			scmUrl="@{project.scm.url}"
 		>
 			<ul>
 				<li>Improved Javadoc formatting.</li>
@@ -145,9 +149,9 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 			projectName="@{documented.name}"
 			version="1.2"
 			datePublished="2016-09-11T17:19:00-0500"
-			groupId="@{documented.groupId}"
+			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
-			scmUrl="@{documented.scm.url}"
+			scmUrl="@{project.scm.url}"
 		>
 			<ul>
 				<li>Use dependencyManagement instead of dependency for junit.</li>
@@ -158,9 +162,9 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 			projectName="@{documented.name}"
 			version="1.1"
 			datePublished="2016-09-03T11:04:00-0500"
-			groupId="@{documented.groupId}"
+			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
-			scmUrl="@{documented.scm.url}"
+			scmUrl="@{project.scm.url}"
 		>
 			<ul>
 				<li>Improved Maven configuration for Java EE 6 dependencies.</li>
@@ -171,9 +175,9 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 			projectName="@{documented.name}"
 			version="1.0"
 			datePublished="2016-08-28T20:39:00-0500"
-			groupId="@{documented.groupId}"
+			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
-			scmUrl="@{documented.scm.url}"
+			scmUrl="@{project.scm.url}"
 		>
 			<ul>
 				<li>Moved automatic Git to separate packages.</li>
