--- a/book/src/main/resources-filtered/META-INF/resources/autogit/taglib/changelog.jspx
+++ b/book/src/main/resources-filtered/META-INF/resources/autogit/taglib/changelog.jspx
@@ -37,7 +37,7 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 		shortTitle="Changelog"
 		tocLevels="1"
 		datePublished="2016-10-30T15:58:45-0500"
-		dateModified="2020-08-19T23:33:25-05:00"
+		dateModified="2020-08-22T00:25:11-05:00"
 	>
 		<!-- The current snapshot, unreleased version -->
 		<c:set var="version" value="@{com.semanticcms:semanticcms-autogit-taglib:pom.version}" />
@@ -56,6 +56,17 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 				<ul>
 					<li>Updated for <core:link book="/" page="/" /> 2 compatibility.</li>
 					<li>Now URI-encoding dependency versions obtained at runtime.</li>
+					<li>
+						<p>
+							Switched to <ao:a href="https://www.npmjs.com/">NPM</ao:a>-based <ao:a href="https://www.webjars.org/">WebJars</ao:a>
+							in groupId <code><ao:a href="https://search.maven.org/search?q=g:org.webjars.npm">org.webjars.npm</ao:a></code>,
+							where possible.  The NPM WebJars seem more up-to-date and actively supported than Classic WebJars.
+						</p>
+						<p>
+							Furthermore, <ao:a href="https://snyk.io/blog/bower-is-dead/">Bower has been deprecated</ao:a>,
+							so we are reluctant to use either "Bower GitHub" or "Bower Original" WebJars.
+						</p>
+					</li>
 				</ul>
 			</changelog:release>
 		</c:if>
