--- a/book/src/main/resources-filtered/META-INF/resources/autogit/taglib/changelog.jspx
+++ b/book/src/main/resources-filtered/META-INF/resources/autogit/taglib/changelog.jspx
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 semanticcms-autogit-taglib - SemanticCMS automatic Git in a JSP environment.
-Copyright (C) 2016, 2017, 2019, 2020  AO Industries, Inc.
+Copyright (C) 2016, 2017, 2019, 2020, 2021  AO Industries, Inc.
     support@aoindustries.com
     7262 Bull Pen Cir
     Mobile, AL 36695
@@ -36,8 +36,8 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 		title="@{documented.name} Changelog"
 		shortTitle="Changelog"
 		tocLevels="1"
-		datePublished="2016-10-30T15:58:45-0500"
-		dateModified="2020-11-27T22:54:38-06:00"
+		datePublished="2016-10-30T15:58:45-05:00"
+		dateModified="2021-05-22T13:07:02-05:00"
 	>
 		<c:if test="${fn:endsWith('@{project.version}', '-SNAPSHOT') and !fn:endsWith('@{project.version}', '-POST-SNAPSHOT')}">
 			<changelog:release
@@ -49,6 +49,7 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 			>
 				<ul>
 					<li>Updated for <core:link book="/" page="/" /> 2 compatibility.</li>
+					<li>Updated to <ao:a rel="nofollow" href="https://www.oracle.com/java/technologies/javaee/javaeetechnologies.html#javaee7">Java™ EE 7 Web Profile</ao:a> (Servlet 3.1, JSP 2.3, EL 3.0, and JSTL 1.2).</li>
 				</ul>
 			</changelog:release>
 		</c:if>
@@ -115,7 +116,7 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 		<changelog:release
 			projectName="@{documented.name}"
 			version="1.3.4"
-			datePublished="2019-06-23T00:17:17-0500"
+			datePublished="2019-06-23T00:17:17-05:00"
 			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
 			scmUrl="@{project.scm.url}"
@@ -135,7 +136,7 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 		<changelog:release
 			projectName="@{documented.name}"
 			version="1.3.3"
-			datePublished="2017-07-20T12:41:09-0500"
+			datePublished="2017-07-20T12:41:09-05:00"
 			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
 			scmUrl="@{project.scm.url}"
@@ -148,7 +149,7 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 		<changelog:release
 			projectName="@{documented.name}"
 			version="1.3.2"
-			datePublished="2016-11-16T18:25:17-0600"
+			datePublished="2016-11-16T18:25:17-06:00"
 			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
 			scmUrl="@{project.scm.url}"
@@ -168,7 +169,7 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 		<changelog:release
 			projectName="@{documented.name}"
 			version="1.3.1"
-			datePublished="2016-10-20T19:10:00-0500"
+			datePublished="2016-10-20T19:10:00-05:00"
 			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
 			scmUrl="@{project.scm.url}"
@@ -182,7 +183,7 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 		<changelog:release
 			projectName="@{documented.name}"
 			version="1.3.0"
-			datePublished="2016-10-04T21:32:00-0500"
+			datePublished="2016-10-04T21:32:00-05:00"
 			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
 			scmUrl="@{project.scm.url}"
@@ -196,7 +197,7 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 		<changelog:release
 			projectName="@{documented.name}"
 			version="1.2"
-			datePublished="2016-09-11T17:19:00-0500"
+			datePublished="2016-09-11T17:19:00-05:00"
 			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
 			scmUrl="@{project.scm.url}"
@@ -209,7 +210,7 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 		<changelog:release
 			projectName="@{documented.name}"
 			version="1.1"
-			datePublished="2016-09-03T11:04:00-0500"
+			datePublished="2016-09-03T11:04:00-05:00"
 			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
 			scmUrl="@{project.scm.url}"
@@ -222,7 +223,7 @@ along with semanticcms-autogit-taglib.  If not, see <http://www.gnu.org/licenses
 		<changelog:release
 			projectName="@{documented.name}"
 			version="1.0"
-			datePublished="2016-08-28T20:39:00-0500"
+			datePublished="2016-08-28T20:39:00-05:00"
 			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
 			scmUrl="@{project.scm.url}"
