--- a/book/src/main/resources-filtered/META-INF/resources/autogit/taglib/changelog.jspx
+++ b/book/src/main/resources-filtered/META-INF/resources/autogit/taglib/changelog.jspx
@@ -37,7 +37,7 @@ along with semanticcms-autogit-taglib.  If not, see <https://www.gnu.org/license
     shortTitle="Changelog"
     tocLevels="1"
     datePublished="2016-10-30T15:58:45-05:00"
-    dateModified="2025-07-02T23:05:45Z"
+    dateModified="2025-12-26T03:55:26Z"
   >
     <c:set var="latestRelease" value="1.6.0" />
     <c:if test="${
@@ -53,6 +53,7 @@ along with semanticcms-autogit-taglib.  If not, see <https://www.gnu.org/license
         scmUrl="@{project.scm.url}"
       >
         <ul>
+          <li>Minimum Java version changed from 11 to 17.</li>
           <li>Removed dependency on jQuery to improve mobile browser response.</li>
         </ul>
       </changelog:release>
