--- a/src/main/resources/META-INF/resources/semanticcms-autogit-taglib/ajax/get-git-status.jspx
+++ b/src/main/resources/META-INF/resources/semanticcms-autogit-taglib/ajax/get-git-status.jspx
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 semanticcms-autogit-taglib - SemanticCMS automatic Git in a JSP environment.
-Copyright (C) 2016, 2020, 2022, 2023  AO Industries, Inc.
+Copyright (C) 2016, 2020, 2022, 2023, 2025, 2026  AO Industries, Inc.
     support@aoindustries.com
     7262 Bull Pen Cir
     Mobile, AL 36695
@@ -32,7 +32,7 @@ Request parameters:
 <jsp:root
   xmlns:ao="https://oss.aoapps.com/taglib/"
   xmlns:autogit="https://semanticcms.com/autogit/taglib/"
-  xmlns:c="http://java.sun.com/jsp/jstl/core"
+  xmlns:c="jakarta.tags.core"
   xmlns:jsp="http://java.sun.com/JSP/Page"
   version="2.1"
 >
